examples/test/testpolicy13302.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13302
  namespace: namespace126
spec:
  podSelector:
    matchLabels:
      key18: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value34
          key41: value8
      podSelector:
        matchLabels:
          key31: value12
          key14: value8
